--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 .container {
     background-color: #f1f1f1; 	
     padding: 15px;
-    width:890px;
-    margin: 10px auto;		
+    width:1000px;
+    margin: 10px auto;
+    margin-top:0;
+    margin-left:auto;
+    margin-bottom:0;
+    margin-right:auto;		
  }
 
  .head {
@@ -16,5 +20,22 @@
 }
 
 img.icon {
+    width: 25px;
+}
+
+img.iconunb {
     width:25px;
+    height:25px;
+}
+
+
+#left {
+	float: left ;
+    width:250px;
+    height:10000px;
+}
+
+#right {
+	float: left ;
+	width:500px;
 }
