--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,22 @@
     margin-top:0;
     margin-left:auto;
     margin-bottom:0;
-    margin-right:auto;		
+    margin-right:auto;
+    		
  }
 
- .head {
-    text-align: center;		
+ h1 {
+    padding-bottom:0px;
+ }
+
+ .head{
+    margin-top:auto;
+    padding-bottom:0.1px;
+    line-height: 19px;
+ }
+
+ .subhead{
+    line-height: 0px;
  }
 
  img.foto {
@@ -20,19 +31,23 @@
 }
 
 img.icon {
-    width: 25px;
+    width: 20px;
 }
 
-img.iconunb {
-    width:25px;
-    height:25px;
-}
 
+a:link {
+    text-decoration: none;
+    font-size: 17px;
+}
 
 #left {
 	float: left ;
     width:250px;
-    height:10000px;
+    height:3000px;
+}
+
+p1{
+    color: #006699;
 }
 
 #right {
