--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 .container {
-    background-color: #f1f1f1; 	
+    background-color: #f1f1f1; 
     padding: 15px;
+    height:auto;
     width:1000px;
+    height:2200px;
     margin: 10px auto;
     margin-top:0;
     margin-left:auto;
     margin-bottom:0;
     margin-right:auto;
-    		
  }
 
  h1 {
@@ -43,7 +44,7 @@ img.icon {
 #left {
 	float: left ;
     width:250px;
-    height:4500px;
+    height:2100px;
 }
 
 p1{
