--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h1 {
 
 .head{
     margin-top:auto;
-    padding-bottom:0.1px;
+    padding-bottom:0px;
     line-height: 19px;
  }
 
@@ -46,7 +46,10 @@ img.icon {
     width:760px;
     height:2000px;
 }
-
+.menu{
+    margin:0px;
+    border: none;
+}
 .linkborder{
     margin: 20px 10px;
 }
