--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,37 @@
     padding: 15px;
     height:auto;
     width:1000px;
-    height:2300px;
+    height:2600px;
     margin: 10px auto;
     margin-top:0;
     margin-left:auto;
     margin-bottom:0;
     margin-right:auto;
  }
+
+.container figure.fotos{
+    width:430px;
+    height:430px;
+    margin-top: 30px;
+}
+
+.container figure.fotos img{
+    border-radius: 1%;
+    position:relative;
+}
+
+.first{
+    width:365px;
+    height:250px;
+    left: 43px;
+}
+
+.second{
+    width:306px;
+    height:227px;
+    left: 333px;
+    top:-150px;
+}
 
 h1 {
     padding-bottom:0px;
